--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -1676,7 +1676,7 @@ databaseChangeLog:
         - column:
             name: name
             type: STRING
-        file: db/changelog/files/data_states.csv
+        file: db/changelog/data/states.csv
         primaryKey: id
         tableName: states
 - changeSet:
@@ -1689,3 +1689,131 @@ databaseChangeLog:
             name: company_id
             type: BIGINT
         tableName: employment_types
+
+- changeSet:
+    id: 1554370439764-1
+    author: Qi-Jia
+    changes:
+    - createTable:
+        columns:
+        - column:
+            name: id
+            type: BIGINT
+            autoIncrement: true
+            constraints:
+              primaryKey: true
+        - column:
+            name: name
+            type: VARCHAR(255)
+        tableName: permission_types
+
+- changeSet:
+    id: 1554370439764-2
+    author: Qi-Jia
+    changes:
+    - createTable:
+        columns:
+        - column:
+            name: id
+            type: BIGINT
+            autoIncrement: true
+            constraints:
+              primaryKey: true
+        - column:
+            name: name
+            type: VARCHAR(255)
+        - column:
+            name: permission_type_id
+            type: BIGINT
+        - column:
+            name: created_at
+            type: DATETIME
+        - column:
+            name: updated_at
+            type: DATETIME
+        - column:
+            name: deleted_at
+            type: DATETIME
+        tableName: permissions
+
+- changeSet:
+    id: 1554370439764-3
+    author: Qi-Jia
+    changes:
+    - createTable:
+        columns:
+        - column:
+            name: id
+            type: BIGINT
+            autoIncrement: true
+            constraints:
+              primaryKey: true
+        - column:
+            name: user_role_id
+            type: BIGINT
+        - column:
+            name: permission_type_id
+            type: BIGINT
+        - column:
+            name: created_at
+            type: DATETIME
+        - column:
+            name: updated_at
+            type: DATETIME
+        - column:
+            name: deleted_at
+            type: datetime
+        tableName: permission_types_user_roles
+- changeSet:
+    id: 1554370439764-4
+    author: Qi-Jia
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+           name: id
+           type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        file: db/changelog/data/permision-types.csv
+        primaryKey: id
+        tableName: permission_types
+
+- changeSet:
+    id: 1554370439764-5
+    author: Qi-Jia
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+           name: id
+           type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        - column:
+            name: permission_type_id
+            type: NUMERIC
+        file: db/changelog/data/permissions.csv
+        primaryKey: id
+        tableName: permissions
+
+- changeSet:
+    id: 1554370439764-6
+    author: Qi-Jia
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+           name: id
+           type: NUMERIC
+        - column:
+            name: user_role_id
+            type: NUMERIC
+        - column:
+            name: permission_id
+            type: NUMERIC
+        file: db/changelog/data/permission-types-user-roles.csv
+        primaryKey: id
+        tableName: permission_types_user_roles
