--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -1819,7 +1819,7 @@ databaseChangeLog:
         tableName: permission_types_user_roles
 
 - changeSet:
-    id: 1556018276884-1
+    id: 1556008104087-1
     author: Qi-Jia
     changes:
     - renameTable:
@@ -1841,6 +1841,7 @@ databaseChangeLog:
         file: db/changelog/data/marital-status.csv
         primaryKey: id
         tableName: marital_status
+
 - changeSet:
       id: 1556008104087-2
       author: wenhao-eb
@@ -1858,3 +1859,51 @@ databaseChangeLog:
               name: city
               type: varchar(255)
           tableName: user_addresses
+
+- changeSet:
+    id: 1556008104087-5
+    author: Qi-Jia
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+            name: id
+            type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        file: db/changelog/data/company-sizes.csv
+        primaryKey: id
+        tableName: company_sizes
+
+- changeSet:
+    id: 1556008104087-6
+    author: Qi-Jia
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+            name: id
+            type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        file: db/changelog/data/user-roles.csv
+        primaryKey: id
+        tableName: user_roles
+
+- changeSet:
+    id: 1556008104087-7
+    author: Qi-Jia
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+            name: id
+            type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        file: db/changelog/data/user-statuses.csv
+        primaryKey: id
+        tableName: user_statuses
