--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -6,13 +6,6 @@ logging:
     root: INFO
 
 spring:
-  datasource:
-    url: jdbc:mysql://shamu-hrs-dev.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/company?zeroDateTimeBehavior=convertToNull
-    username: shamuhrs
-    password: 4eD852HheH9DLykD
-    hikari:
-      maximum-pool-size: 4
-      minimum-idle: 2
   jpa:
     show-sql: true
     properties:
@@ -20,6 +13,8 @@ spring:
         format_sql: true
   thymeleaf:
     cache: false
+  profiles:
+    include: database
 
 application:
   systemEmailAddress: noreply@interviewed.com
