--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -765,3 +765,20 @@ databaseChangeLog:
             name: deleted_at
             type: datetime
         tableName: paid_holiday_employees
+
+- changeSet:
+    id: 1556008164280-4
+    author: wenhao-eb
+    runOnchange: ture
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+            name: id
+            type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        file: db/changelog/data/countries.csv
+        primaryKey: id
+        tableName: countries
